CORDA-3696: Remove internal access warnings and new JDK11 version checker.